<resources>
    <string name="app_name">BSSA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Masuk</string>
    <string name="phone_number">Nomor Telephone</string>
    <string name="example_number_phone">+62 878912012811</string>
    <string name="input_your_password">Masukkan password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="dont_have_account">Belom punya akun?</string>
    <string name="register_here">Daftar di sini</string>
    <string name="register">Daftar</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="enter_full_name">Masukkan Nama Lengkap </string>
    <string name="enter_citizen_identification_number">Masukkan Nomer NIK</string>
    <string name="citizen_identification_number">Nomer NIK</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="example_gender">Laki-laki</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="enter_here">Masuk Disini!</string>
    <string name="button_back">Button Back</string>
    <string name="input_otp">Masukan OTP</string>
    <string name="the_6_digit_code_sent">Ketik 6 digit kode yang dikirimkan ke</string>
    <string name="the_6_digit_code_sent_to_whatsapp">Ketik 6 digit kode yang dikirimkan \nke nomor anda</string>
    <string name="example_destination_otp">+62872810112812</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="request_new_code">Minta kode baru </string>
    <string name="hai">Hai</string>
    <string name="example_name">Achmad  Muchlasin</string>
    <string name="example_full_name">Adolph Blaine Charles David Earl Frederick</string>
    <string name="icon_wallet">"icon saldo "</string>
    <string name="actual_balance">Saldo Aktual</string>
    <string name="example_balance">Rp 200.000</string>
    <string name="temporary_balance">Saldo Sementara</string>
    <string name="icon_menu">icon_menu</string>
    <string name="deposit">Setor</string>
    <string name="image_news">image news</string>
    <string name="example_title_news">INDONESIA PENYUMBANG SAMPAH PLASTIK TERBESAR</string>
    <string name="example_content_news">Jakarta (ANTARA) - Kementerian Lingkungan Hidup dan Kehutanan (KLHK) mendorong penyelesaian sampah alat peraga kampanye</string>
    <string name="title_notification">Notifikasi</string>
    <string name="icon_notification">Icon Notif</string>
    <string name="example_time_now">12 Januari 2024</string>
    <string name="example_tagline_notification">Notifikasi</string>
    <string name="example_title_notification">Penarikan uang berhasil</string>
    <string name="example_description_notification">Penarikan anda sudah berhasil kekirim ke dana dengan nomer 08979791982</string>
    <string name="title_transaction_history">Riwayat Transaksi</string>
    <string name="icon">icon</string>
    <string name="example_transaction_history">Saldo berhasil masuk</string>
    <string name="example_desc_transaction_history">saldo yang anda tarik sudah masuk ke rekening mu. mohon check kembali</string>
    <string name="my_profile">Profil Saya</string>
    <string name="profile">Profile saya</string>
    <string name="change_password">Ubah Password</string>
    <string name="input_old_password">Masukkan Password Lama</string>
    <string name="password_hint">********</string>
    <string name="input_new_password">Masukkan Password Baru</string>
    <string name="repeat_new_password">Ulangi Password Baru</string>
    <string name="save">Simpan</string>
    <string name="indonesia_language">Bahasa Indonesia</string>
    <string name="english_language">Bahasa Inggris</string>
    <string name="name">Nama</string>
    <string name="date">Tanggal</string>
    <string name="example_date">06 September 2001</string>
    <string name="photo">Foto</string>
    <string name="waste_image">image</string>
    <string name="photo_your_waste">Foto sampah anda </string>
    <string name="example_type_waste">Botol Plastik</string>
    <string name="example_price">Rp 100.000/kg</string>
    <string name="example_status_history">Menunggu setoran ditimbang</string>
    <string name="title_home">Home</string>
    <string name="title_account">Akun</string>
    <string name="withdraw_balance">Tarik Saldo</string>
    <string name="pick_up_waste">Jemput Sampah</string>
    <string name="history_deposit">Riwayat Setoran</string>
    <string name="type_waste">Jenis Sampah</string>
    <string name="account_number">Nomor rekening tujuan</string>
    <string name="method_withdraw">Metode yang digunakan </string>
    <string name="amount">Jumlah penarikan</string>
    <string name="example_rp">Rp 100.000</string>
    <string name="example_0_rp">Rp 0</string>
    <string name="random_number">0182028</string>
    <string name="example_bank">Bank BNI</string>
    <string name="requirement">Syarat dan ketentuan berlaku</string>
    <string name="example_requirement">1. saldo tidak boleh kurang dari Rp 10.000 \n2. Biaya cash administrasi akan ditanggungkan ke nasabah sebesar Rp. 2.500</string>
    <string name="withdraw">Tarik</string>
    <string name="total">Total</string>
    <string name="title_admin_menu">Menu</string>
    <string name="title_admin_home">Home</string>
    <string name="title_admin_account">Akun</string>
    <string name="nasabah">Nasabah</string>
    <string name="sales_result">Masukan Hasil Penjualan</string>
    <string name="waste_deposit">Setoran sampah</string>
    <string name="balance_withdrawal_history">Riwayat Penarikan Saldo</string>
    <string name="news">Berita</string>
    <string name="report_customer">Laporan Nasabah</string>
    <string name="customer_deposit_waste">Masukan Penyetoran Sampah Nasabah</string>
    <string name="schedulling_open_warehouse">Penjadwalan Buka Gudang</string>
    <string name="language">Bahasa</string>
    <string name="logout">Keluar</string>
    <string name="input_name">Masukan Nama Lengkap</string>
    <string name="input_date">Masukan Tanggal</string>
    <string name="button_add">Tambah</string>
    <string name="detail_news">Detail Berita</string>
    <string name="icon_edit">icon_edit</string>
    <string name="price">Harga</string>
    <string name="price_kg">Harga /kg</string>
    <string name="title">Judul</string>
    <string name="input_title_news">Masukan judul berita</string>
    <string name="description">Deskripsi</string>
    <string name="input_desc_news">Masukan deskripsi berita</string>
    <string name="photo_news">Foto Berita</string>
    <string name="category">category</string>
    <string name="update">Update</string>
    <string name="delete">Hapus</string>
    <string name="Edit">Edit</string>
    <string name="waste_type_information">Informasi Jenis Sampah</string>
    <string name="input_nasabah_name">Masukkan nama nasabah</string>
    <string name="filter">Filter</string>
    <string name="icon_next">icon_next</string>
    <string name="nik">NIK</string>
    <string name="example_nik">3161212712711234</string>
    <string name="birt_date">Tanggal Lahir</string>
    <string name="balance">Saldo</string>
    <string name="history_total_deposit">Riwayat total setoran</string>
    <string name="example_history_deposit">60 Kg</string>
    <string name="history_total_withdrawal">Riwayat total penarikan</string>
    <string name="no_regis">Nomor Registrasi</string>
    <string name="example_no_regis">WYG0801138271</string>
    <string name="weight">Berat Sampah /kg</string>
    <string name="weight_waste">Berat</string>
    <string name="example_weight">6</string>
    <string name="add_type_waste">Tambah jenis sampah</string>
    <string name="enter_your_waste_photo">Masukan foto sampah mu</string>
    <string name="total_result_deposit">Total Hasil Setoran</string>
    <string name="deposit_weighing">Penimbangan Setoran</string>
    <string name="example_address">Ds. laban Rt 20 Rw 07 Kec. Menganti Kab. Gresik</string>
    <string name="address">Alamat</string>
    <string name="waste">Sampah</string>
    <string name="update_data">Update Data</string>
    <string name="women">Perempuan</string>
    <string name="men">Laki-Laki</string>
    <string name="input_your_name">Masukan nama nasabah</string>
    <string name="input_your_date">Masukan tanggal setoran</string>
    <string name="detail_deposit_weighing">Penimbangan Setoran</string>
    <string name="input_waste_weight">Masukan berat sampah</string>
    <string name="edit_news">Edit Berita</string>
    <string name="delete_news">Hapus Berita</string>
    <string name="payment_method">Metode Penarikan</string>
    <string name="total_saldo">Total Saldo</string>
    <string name="total_waste">Total Sampah</string>
    <string name="deposit_predict_balance">Saldo Prediksi</string>
    <string name="done">Selesai</string>
    <string name="icon_man">icon_man</string>
    <string name="icon_women">Icon Women</string>
    <string name="example_type_waste_2">Botol Air Mineral bersih</string>
    <string name="update_price_waste">Update Harga Sampah</string>
    <string name="icon_pick_up">Icon truck</string>
    <string name="register_pick_up_waste">Daftar Jemput Sampah tanggal</string>
    <string name="history_pick_up">Riwayat Jemput Sampah</string>
    <string name="description_type_waste">Deskripsi Jenis Sampah</string>
    <string name="status">Status</string>
    <string name="scheduling_pick_up">Jadwal penjemputan</string>
    <string name="list_nasabah_scheduling">Nasabah pendaftar</string>
    <string name="list_nasabah_approved">Nasabah yang diterima</string>
    <string name="approve">Setujui</string>
    <string name="reject">Tolak</string>
    <string name="icon_back">icon back</string>
    <string name="resending_otp">Kirim Ulang OTP dalam</string>
    <string name="example_time">50 detik</string>
    <string name="time_out">Waktu Habis</string>
    <string name="input_your_phone_number">Masukan nomor telephone</string>
    <string name="new_password">Password Baru</string>
    <string name="reset_password">Reset Password Anda</string>
    <string name="empty_schedule_pick_up">Tidak ada jadwal penjemputan</string>
    <string name="add_scheduling_pick_up">Tambah jadwal jemput sampah</string>
    <string name="photo_profile">Foto Profil</string>
    <string name="edit">edit</string>
    <string name="choose_gallery">Pilih Foto</string>
    <string name="choose_camera">Ambil Foto</string>
    <string name="icon_close">Icon close</string>
    <string name="text_cancel">Batal</string>
    <string name="history_withdrawal">Riwayat penarikan</string>
    <string name="icon_valid">icon_valid</string>
    <string name="example_history_withdrawal">Saldo berhasil ditarik</string>
    <string name="icon_success">icon_success</string>
    <string name="success_withdraw_balance">Penarikan Saldo Berhasil</string>
    <string name="show_status_withdraw">Lihat Status Transaksi</string>
    <string name="oke">Ok</string>
    <string name="success_delivery_funds">Status : Berhasil</string>
    <string name="input_photo_type_waste">Masukan foto jenis sampah</string>
    <string name="photo_waste">Foto Sampah</string>
    <string name="input_price_waste_per_kg">Masukan harga sampah</string>
    <string name="loading">memuat...</string>
    <string name="name_waste">Nama Sampah</string>
    <string name="input_waste_name">Masukan nama sampah</string>
    <string name="old_nasabah">Nasabah Terlama</string>
    <string name="new_nasabah">Nasabah Baru</string>
    <string name="filter_nasabah_by_created">Urutkan Sesuai dengan pendaftaran</string>
    <string name="a_z">A ke Z</string>
    <string name="filter_nasabah_by_name">Urukan sesuai nama</string>
    <string name="z_a">Z ke A</string>
    <string name="input_category_waste">Masukan jenis sampah</string>
</resources>