<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_corner_top"
    tools:context=".ui.bottom_sheet.SuccessWithdrawBalanceBottomSheetFragment">

    <ImageView
        android:id="@+id/iconSuccess"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icon_success"
        android:src="@drawable/icon_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSuccess"
        style="@style/TextContent.Body.PopBold"
        android:layout_marginTop="16dp"
        android:text="@string/success_withdraw_balance"
        android:textColor="@color/deep_green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconSuccess" />

    <TextView
        android:id="@+id/textTotal"
        style="@style/TextContent.Body.PopReg"
        android:layout_marginTop="10dp"
        android:text="@string/example_rp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSuccess" />

    <TextView
        android:id="@+id/textMethod"
        style="@style/TextContent.Body.PopReg"
        android:layout_marginTop="5dp"
        android:text="@string/method_withdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTotal" />

    <TextView
        android:id="@+id/textStatus"
        style="@style/TextContent.Body.PopReg"
        android:layout_marginTop="5dp"
        android:text="@string/success_delivery_funds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textMethod" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShowStatus"
        style="@style/ButtonContent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:text="@string/show_status_withdraw"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStatus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOk"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/pop_bold"
        android:textColor="@color/deep_green"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:text="@string/oke"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonShowStatus"
        app:strokeColor="@color/deep_green"
        app:strokeWidth="1.5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>