<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.menu.news.AddNewsFragment">

    <include
        android:id="@+id/viewAppbar"
        layout="@layout/custom_app_bar_button_and_title"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textNameWaste"
        style="@style/TextContent.Body.PopReg"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/name_waste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAppbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edlNameWaste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_waste_name"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNameWaste">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameWaste"
            style="@style/EditTextContent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textTypeWaste"
        style="@style/TextContent.Body.PopReg"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/type_waste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edlNameWaste" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edlTypeWaste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_category_waste"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTypeWaste">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTypeWaste"
            style="@style/EditTextContent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textPrice"
        style="@style/TextContent.Body.PopReg"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/price_kg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edlTypeWaste" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edlPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_price_waste_per_kg"
        android:textColorHint="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPrice"
            style="@style/EditTextContent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textPhoto"
        style="@style/TextContent.Body.PopReg"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/photo_waste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edlPrice" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPhoto"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintStart_toStartOf="@id/textPhoto"
        app:layout_constraintTop_toBottomOf="@id/textPhoto">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textCardPhoto"
            style="@style/TextContent.Body.PopReg"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/input_photo_type_waste"
            android:textColor="@color/grey"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageWaste"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/waste_image"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        style="@style/ButtonContent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/save"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPhoto" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:progressBackgroundTint="@color/deep_green"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/cardPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textLoading"
        style="@style/TextContent.Body.MonMedium.SmallSp"
        android:text="@string/loading"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>